[package]
name = "muncher"
version = "0.7.0"
authors = ["Devin R <devin.ragotzy@gmail.com>"]
license = "MIT/Apache-2.0"
description = "Easy to use char muncher for writing a lexer."
repository = "https://github.com/DevinR528/muncher"
keywords = ["parse", "munch", "token", "lexer"]
categories = ["parsing", "parser-implementations"]
edition = "2018"
readme = "README.md"

[badges]
travis-ci = { repository = "DevinR528/muncher" }
